--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,7 @@ h1, h2, h3 {
   font-weight: bold;
 }
 h1 {
-  color: #ffffff;
-  background: #4aaaa5;
+  color: #4aaaa5;
 }
 h2 {
   color: #4aaaa5;
